# bookieskit

./: .chatops.json  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  audit_full.py  competition_odds.csv  demo.py  odds_comparison.csv  pyproject.toml
.claude/: orchestrator-settings.json
.github/: pull_request_template.md
.github/workflows/: canary.yml  ci.yml  release.yml
docs/: AGENT_IDENTITY_SETUP.md  GRAPHIFY.md  ORCHESTRATOR_SETUP.md  SLACK_SETUP.md  bet9ja.md  betika.md  betpawa.md  betway.md  coverage.md  docs-sync.md  examples.md  markets.md  matching.md  msport.md  sportpesa.md  sportybet.md
docs/audits/: 2026-06-26-wc-live-audit.md  2026-06-26-wc-prematch-audit.md  README.md
docs/plans/: 2026-05-05-betway-client.md  2026-05-05-bookieskit-v1.md  2026-05-05-bookieskit-v2-markets-matching.md  2026-05-05-docs-and-cleanup.md  2026-05-05-msport-bookmaker.md
docs/specs/: 2026-05-05-betway-client-design.md  2026-05-05-bookieskit-library-design.md  2026-05-05-bookieskit-v2-markets-matching-design.md  2026-05-05-docs-and-cleanup-design.md  2026-05-05-msport-bookmaker-design.md  msport-api-research.md
examples/: audit_full.py  compare_betpawa_competition_full.py  count_5bookies.py  demo.py  final_audit.py  find_betgenius_matches.py  full_audit_4bookies.py  full_audit_v2.py  monitor_competitions.py  odds_for_betpawa_competition.py  odds_for_sr_id.py  odds_from_betpawa_id.py  test_live_flow.py
scripts/: betpawa_availability_monitor.py  capture_event_info_fixtures.py  install-orchestrator.ps1  orchestrator-tick.ps1  probe_2way_handicap_ft.py  probe_next_goal_and_team_ou.py  smoke_new_markets.py
src/bookieskit/: __init__.py  base.py  config.py  event_info.py  exceptions.py
src/graphify-out/: graph.json  (+1 more)
tests/: conftest.py  test_base.py  test_bet9ja.py  test_betika.py  test_betika_shape.py  test_betpawa.py  test_betpawa_availability_monitor.py  test_betway.py  test_convenience.py  test_event_info.py  test_exceptions.py  test_extractor.py  test_iterators.py  test_matcher.py  test_msport.py  test_parser_basketball.py  test_parser_bet9ja.py  test_parser_betika.py  test_parser_betpawa.py  test_parser_betpawa_basketball.py  test_parser_betway.py  test_parser_bookings.py  test_parser_corners.py  test_parser_msport.py  test_parser_sportpesa.py  test_parser_sportybet.py  test_parser_tennis.py  test_probability.py  test_registry.py  test_sportpesa.py  test_sportybet.py  test_sync.py  test_types.py
(+179 files in other folders)
