[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bookieskit"
version = "0.2.0"
description = "HTTP clients for scraping betting data from BetPawa, SportyBet, and Bet9ja"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
